Fix gap between `li`

--- a/assets/scss/journal.scss
+++ b/assets/scss/journal.scss
@@ -184,6 +184,7 @@ blockquote {
 }
 
 li {
+  margin-top: 10px;
   p {
     white-space: pre-line;
     br {
